# fps_recoil_auto_control

./: LICENSE  README.md  meson.build  test_keyboard.py  test_mouse.py
scripts/: usbhid_dev_install.sh  usbhid_dev_uninstall.sh
src/: agp_data.h  agp_gen.c  agp_gen.h  auto_gun_press.c  auto_gun_press.h  bswap.h  hid.c  hid.h  input.c  input.h  log.h  main.c  output.c  output.h
